refactor(errors): consolidate exception handling into ApiErrors using ErrorResponseFactory\n\n- Remove deprecated GlobalExceptionHandler\n- Delegate all mappings to ErrorResponseFactory\n- Add remaining stock/forbidden/notfound/data-integrity handlers\n- Unified validation response structure